--- a/src/shop.html
+++ b/src/shop.html
@@ -265,7 +265,35 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-sm mx-auto">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                <div class="-ml-96 -pl-10"> 
+                <div class="dropdown">
+                    <label tabindex="0" class="btn m-1 bg-gray-100 text-gray-800 hover:bg-gray-50">Kategorier <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="22" height="22" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"></path></svg></label>
+                    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-gray-200 rounded-box w-52">
+                      <li><a>Minimalisme</a></li>
+                      <li><a>Naturen</a></li>
+                      <li><a>Byen</a></li>
+                    </ul>
+                  </div>
+                  <div class="dropdown">
+                    <label tabindex="0" class="btn m-1 bg-gray-100 text-gray-800 hover:bg-gray-50">Farver <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="22" height="22" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"></path></svg></label>
+                    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-gray-200 rounded-box w-52">
+                      <li><a>Gul</a></li>
+                      <li><a>Blaa</a></li>
+                      <li><a>Sorthvid</a></li>
+                    </ul>
+                  </div>
+                  <div class="dropdown">
+                    <label tabindex="0" class="btn m-1 bg-gray-100 text-gray-800 hover:bg-gray-50">Size <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="22" height="22" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"></path></svg></label>
+                    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-gray-200 rounded-box w-52">
+                      <li><a>21*10</a></li>
+                      <li><a>30*50</a></li>
+                      <li><a>50*70</a></li>
+                      <li><a>70*90</a></li>
+                    
+                    </ul>
+                  </div>
+                </div>
+                <!-- <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
                     Plakater</h1>
                 <p class="text-center pt-8">
                     Her finder du vores udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg;-)
@@ -273,7 +301,7 @@
                 <p class="text-base leading-normal sm:leading-4 text-center pt-8">Kategorier: <a href="kategori.html"
                         class="underline">Naturen</a> / <a href="kategori.html" class="underline">Byen</a>
                     / <a href="kategori.html" class="underline">Sort/hvid</a> / <a href="kategori.html"
-                        class="underline">Minimalisme</a></p>
+                        class="underline">Minimalisme</a></p> -->
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6 lg:gap-8 mt-8 md:mt-10">
 
