--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,10 @@
             </h1>
             <ul class="hidden w-8/12 md:flex items-center justify-center space-x-8">
               <a href="shop.html"
-                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Plakater</a>
+                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Plakater</a>
+              </li>
+              <a href="shop.html"
+                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Bøger</a>
               </li>
               <li>
                 <a href="inspiration.html"
@@ -160,7 +163,18 @@
               <li>
                 <a href="shop.html"
                   class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
-                  Shop/plakater
+                  Plakater
+                  <div>
+                    <img class="" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7.svg" alt="arrow">
+                    <img class=" hidden" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7dark.svg"
+                      alt="arrow">
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="shop.html"
+                  class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
+                  Bøger
                   <div>
                     <img class="" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7.svg" alt="arrow">
                     <img class=" hidden" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7dark.svg"
@@ -228,26 +242,102 @@
 
   <!-- Content -->
 
-  <div class="mx-auto container px-6 xl:px-0 py-12">
+  <div class="mx-auto my-0 container px-0 xl:px-0 py-0">
     <div class="flex flex-col">
       <!-- Hero -->
-      <div class="flex flex-col justify-center">
-        <div class="relative">
-          <img class="hidden sm:block w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
-          <img class="sm:hidden w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
-          <div
-            class="absolute sm:bottom-8 bottom-4 sm:top-8 top-4 pr-10 sm:pr-0 left-4 sm:left-8 flex justify-self-center items-center">
-            <p
-              class="text-3xl sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white max-w-sm text-shadow">
-              Lunefuld Lykke -
-              Stemningsfulde plakater
-            </p>
-          </div>
+      <div class="mx-0 my-0 px-0 py:0">
+        <div class="absolute -mx-20">
+          <img class=" object-fill" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
         </div>
+        <div
+            class="relative pt-52 pl-16">
+            <p
+              class="text-3xl sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white  text-shadow">
+              Lunefuld Lykke
+            </p>
+            <p class="text-xl sm:text-2xl xl:text-3xl 2xl:text-2xl font-medium leading-5 text-gray-800">Stemningsfulde plakater</p>
+         <button class="px-5 py-2 bg-gray-800 rounded-md text-white mt-5 hover:bg-gray-700">
+           Shop plakater
+         </button>
+        </div>
+       
+          
       </div>
       <!-- Hero slut -->
 
       <!-- Featured categories-->
+      <div class=" mt-32 md:mt-72 lg:mt-96 grid lg:grid-cols-2 gap-x-8 gap-y-8 items-center">
+
+        <div
+          class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
+          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+              src="content/trae-poster.jpg" alt="sofa-4" /></a>
+          <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Plakater med naturen i fokus</p>
+            </div>
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
+                Fra 199.-</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div
+          class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
+          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+              src="content/poster-byen.jpg" alt="sofa-4" /></a>
+          <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Plakater med byen i fokus</p>
+            </div>
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
+                Fra 199.-</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div
+          class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
+          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+              src="content/minimalisme-poster.jpg" alt="sofa-4" /></a>
+          <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Minimalistiske plakater</p>
+            </div>
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
+                Fra 199.-</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div
+          class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
+          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+              src="content/poster-sort-hvid.jpg" alt="sofa-4" /></a>
+          <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Sort/hvid</p>
+            </div>
+            <div>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
+                Fra 199.-</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
       <div class="mt-10 grid lg:grid-cols-2 gap-x-8 gap-y-8 items-center">
 
         <div
@@ -322,6 +412,8 @@
       <!-- Featured categories slut -->
     </div>
   </div>
+
+  
   <!-- Content slut-->
 
   <!-- Footer -->
@@ -355,7 +447,7 @@
         <div class="sm:ml-0 ml-8 flex flex-col">
           <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
           <a href="shop.html"
-            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Shop/plakater</a>
+            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Plakater</a>
           <a href="inspiration.html"
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Inspiration</a>
           <a href="om.html"
