--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,24 @@
   -->
 
   <!-- Navigation -->
+  <section>
+    <div class="alert shadow-lg">
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+          class="stroke-info flex-shrink-0 w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+        <span>we use cookies to ensure a better shopping experience for you</span>
+      </div>
+      <div class="flex flex-row place-content-end">
+        <button class="btn btn-sm btn-gray-200">Deny</button>
+        <button class="btn btn-sm btn-gray-800">Accept</button>
+      </div>
+    </div>
+  </section>
+
+
   <div class="">
     <div>
       <div class="relative">
@@ -508,6 +526,9 @@
         </div>
       </div>
     </div>
+
+
+
   </footer>
   <!-- Footer slut -->
 
