--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,24 @@
   -->
 
   <!-- Navigation -->
+  <section>
+    <div class="alert shadow-lg">
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+          class="stroke-info flex-shrink-0 w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+        <span>we use cookies to ensure a better shopping experience for you</span>
+      </div>
+      <div class="flex flex-row place-content-end">
+        <button class="btn btn-sm btn-gray-200">Deny</button>
+        <button class="btn btn-sm btn-gray-800">Accept</button>
+      </div>
+    </div>
+  </section>
+
+
   <div class="">
     <div>
       <div class="relative">
@@ -249,19 +267,18 @@
         <div class="absolute -mx-20">
           <img class=" object-fill" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
         </div>
-        <div
-            class="relative pt-52 pl-16">
-            <p
-              class="text-3xl sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white  text-shadow">
-              Lunefuld Lykke
-            </p>
-            <p class="text-xl sm:text-2xl xl:text-3xl 2xl:text-2xl font-medium leading-5 text-gray-800">Stemningsfulde plakater</p>
-         <button class="px-5 py-2 bg-gray-800 rounded-md text-white mt-5 hover:bg-gray-700">
-           Shop plakater
-         </button>
+        <div class="relative pt-52 pl-16">
+          <p class="text-3xl sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white  text-shadow">
+            Lunefuld Lykke
+          </p>
+          <p class="text-xl sm:text-2xl xl:text-3xl 2xl:text-2xl font-medium leading-5 text-gray-800">Stemningsfulde
+            plakater</p>
+          <button class="px-5 py-2 bg-gray-800 rounded-md text-white mt-5 hover:bg-gray-700">
+            Shop plakater
+          </button>
         </div>
-       
-          
+
+
       </div>
       <!-- Hero slut -->
 
@@ -413,7 +430,7 @@
     </div>
   </div>
 
-  
+
   <!-- Content slut-->
 
   <!-- Footer -->
@@ -422,9 +439,11 @@
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 gap-4">
         <div class="flex flex-col flex-shrink-0">
           <div class="text-white font-bold">
-            Lunefuld Lykke
+            Kontakt
           </div>
-          <p class="text-sm leading-none  mt-4 text-white">Copyright © 2022 Lunefuld Lykke</p>
+          <p class="text-sm leading-none  mt-4 text-white">Fiostræde 13 <br><br> 1171 København</p>
+          <p class="text-sm leading-none  mt-4 text-white"> <br> +45 22 33 44 55</p>
+          <p class="text-sm leading-none  mt-4 text-white"> <br>lunefuldlykke@aps.com</p>
           <div class="flex items-center gap-x-4 mt-12">
             <button aria-label="instagram"
               class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 opacity-50 w-8 h-8 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
@@ -461,11 +480,12 @@
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Kontakt
             policy</a>
           <a href="javascript:void(0)"
-            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">FAQ
-            policy</a>
+            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">FAQ</a>
           <a href="javascript:void(0)"
-            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Handelsbetingelser
-            policy</a>
+            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Handelsbetingelser</a>
+          <a href="javascript:void(0)"
+            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Persondatapolitik</a>
+
         </div>
         <div class="lg:block hidden">
           <label class="text-xl font-medium leading-5  text-white">Hold dig opdateret!</label>
@@ -483,6 +503,9 @@
               </svg>
             </button>
           </div>
+          <p class="text-base leading-4 mt-6 text-white">
+            CVR:
+            21 48 18 15</p>
         </div>
       </div>
       <div class="mt-10 lg:hidden">
@@ -492,7 +515,7 @@
             class="text-base leading-4 p-4 relative z-0 w-full focus:outline-none text-gray-800 placeholder-gray-800   border-white bg-white "
             placeholder="E-mail" />
           <button aria-label="send"
-            class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 cursor-pointer mr-4 cursor-pointer relative z-40">
+            class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 mr-4 cursor-pointer relative z-40">
             <svg class="fill-current text-gray-800 hover:text-gray-500  " width="16" height="17" viewBox="0 0 16 17"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -503,6 +526,9 @@
         </div>
       </div>
     </div>
+
+
+
   </footer>
   <!-- Footer slut -->
 
